<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".view.LoginActivity"
		android:background="#282828"
		>

	<ImageView
			android:id="@+id/logo"
			android:layout_width="250dp"
			android:layout_height="250dp"
			android:src="@drawable/lionlogo"
			android:layout_centerHorizontal="true"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="80dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="81dp"
			android:layout_marginTop="55dp"
			app:layout_constraintTop_toTopOf="parent"/>

	<EditText
			android:id="@+id/emailLogin"
			android:layout_width="250dp"
			android:layout_height="39dp"
			android:backgroundTint="#92FFFFFF"
			android:hint="@string/email"
			android:textColor="#92FFFFFF"
			android:textColorHint="#92FFFFFF"
			android:inputType="textEmailAddress"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="81dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="80dp"
			android:layout_marginTop="41dp"
			app:layout_constraintTop_toBottomOf="@+id/logo"/>

	<EditText
			android:id="@+id/pwdLogin"
			android:layout_width="250dp"
			android:layout_height="39dp"
			android:backgroundTint="#92FFFFFF"
			android:hint="@string/password"
			android:textColor="#4BFFFFFF"
			android:textColorHint="#92FFFFFF"
			android:inputType="textPassword"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="80dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="81dp"
			android:layout_marginTop="20dp"
			app:layout_constraintTop_toBottomOf="@+id/emailLogin"/>

	<Button
			android:id="@+id/buttonLogin"
			android:layout_width="250dp"
			android:layout_height="45dp"
			android:background="@drawable/rounded_button"
			android:textColor="#92FFFFFF"
			android:textColorHint="#4BFFFFFF"
			android:text="@string/login"
			android:textSize="15sp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="80dp"
			android:layout_marginTop="103dp"
			app:layout_constraintTop_toBottomOf="@+id/pwdLogin"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="81dp"/>

	<Button
			android:id="@+id/createAccButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:text="@string/create_account"
			android:layout_marginEnd="145dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="145dp"
			android:layout_marginTop="20dp"
			app:layout_constraintTop_toBottomOf="@+id/buttonLogin"/>





</androidx.constraintlayout.widget.ConstraintLayout>