<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".view.RegisterActivity"
		android:background="#282828">


	<EditText
			android:id="@+id/emailEditText"
			android:layout_width="250dp"
			android:layout_height="39dp"
			android:backgroundTint="#92FFFFFF"
			android:hint="@string/email"
			android:textColor="#92FFFFFF"
			android:textColorHint="#92FFFFFF"
			android:inputType="textEmailAddress"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="80dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="81dp"
			android:layout_marginTop="303dp"
			app:layout_constraintTop_toTopOf="parent"/>

	<EditText
			android:id="@+id/pwdEditText"
			android:layout_width="250dp"
			android:layout_height="39dp"
			android:backgroundTint="#92FFFFFF"
			android:hint="@string/password"
			android:textColor="#4BFFFFFF"
			android:textColorHint="#92FFFFFF"
			android:inputType="textPassword"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="80dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="81dp"
			android:layout_marginTop="14dp"
			app:layout_constraintTop_toBottomOf="@+id/emailEditText"/>

	<Button
			android:id="@+id/registerButton"
			android:layout_width="250dp"
			android:layout_height="45dp"
			android:background="@drawable/rounded_button"
			android:textColor="#92FFFFFF"
			android:textColorHint="#4BFFFFFF"
			android:text="@string/register"
			android:textSize="15sp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="80dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="81dp"
			android:layout_marginTop="176dp"
			app:layout_constraintTop_toBottomOf="@+id/pwdEditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>